task-2-39-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-2-39-ingress
  namespace: akash-c-a
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: task-2-39.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-2-37-clusterip
                port:
                  number: 80
