task-2-40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-2-40-ingress
  namespace: akash-c-a
  annotations:
    # Ensure routers are attached to both HTTP and HTTPS entrypoints (Traefik v2).
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  ingressClassName: akash-traefik
  tls:
    - hosts:
        - task-2-41-akash-c-a.local
      secretName: task-2-41-tls
  rules:
    - host: task-2-41-akash-c-a.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-2-37-clusterip
                port:
                  number: 80
